Support JEP 512 flexible main methods on JDK 25+ / JDK21+ with `--enable-preview` (#4418)
* Support JEP 512 flexible main methods (JDK 25)

* code review: add a test for main class inherited from a Scala trait